feat(api): add user-specific dashboard stats and chart data
- Add SECRET_KEY and MONGODB_URI to vercel.json for production environment
- Refactor index and charts routes to use user-specific

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,8 @@
     }
   ],
   "env": {
-    "FLASK_ENV": "production"
+    "FLASK_ENV": "production",
+    "SECRET_KEY": "your-production-secret-key",
+    "MONGODB_URI": "mongodb+srv://username:password@cluster.mongodb.net/aula1_db?retryWrites=true&w=majority"
   }
 }
