--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,6 @@
     }
   ],
   "env": {
-    "FLASK_ENV": "production",
-    "SECRET_KEY": "your-production-secret-key",
-    "MONGODB_URI": "mongodb+srv://username:password@cluster.mongodb.net/aula1_db?retryWrites=true&w=majority"
+    "FLASK_ENV": "production"
   }
 }
