--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: aula1-app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: waitress-serve --host=0.0.0.0 --port=$PORT app:app
+    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
     envVars:
       - key: FLASK_ENV
         value: production
